--- a/pixabayProject/pixabayProject/MyCollectionViewCell.xib
+++ b/pixabayProject/pixabayProject/MyCollectionViewCell.xib
@@ -34,6 +34,7 @@
             <connections>
                 <outlet property="myImageView" destination="IvI-Yh-bSE" id="ddV-ch-aqn"/>
             </connections>
+            <point key="canvasLocation" x="47.826086956521742" y="84.375"/>
         </collectionViewCell>
     </objects>
 </document>
